--- a/VuforiaScripts.csproj
+++ b/VuforiaScripts.csproj
@@ -331,6 +331,18 @@
     <Reference Include="UnityEditor.Purchasing">
       <HintPath>/Users/luisfelipejimenez/Documents/AR/AR Anatomy Experience/Library/PackageCache/com.unity.purchasing@2.0.3/Editor/UnityEditor.Purchasing.dll</HintPath>
     </Reference>
+    <Reference Include="AWSSDK.SecurityToken">
+      <HintPath>/Users/luisfelipejimenez/Documents/AR/AR Anatomy Experience/Assets/AWS/AWSSDK/AWSSDK.SecurityToken.dll</HintPath>
+    </Reference>
+    <Reference Include="AWSSDK.CognitoIdentity">
+      <HintPath>/Users/luisfelipejimenez/Documents/AR/AR Anatomy Experience/Assets/AWS/AWSSDK/AWSSDK.CognitoIdentity.dll</HintPath>
+    </Reference>
+    <Reference Include="AWSSDK.Core">
+      <HintPath>/Users/luisfelipejimenez/Documents/AR/AR Anatomy Experience/Assets/AWS/AWSSDK/AWSSDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="AWSSDK.S3">
+      <HintPath>/Users/luisfelipejimenez/Documents/AR/AR Anatomy Experience/Assets/AWS/AWSSDK/AWSSDK.S3.dll</HintPath>
+    </Reference>
     <Reference Include="netstandard">
       <HintPath>/Applications/Unity/Unity.app/Contents/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
     </Reference>
